--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -38,7 +38,7 @@
    </div>
 
    <div class="profile">
-      <img src="../../images/pic-1.jpg" class="image" alt="">
+      <img src="../../public/images/pic-1.jpg" class="image" alt="">
       <h3 class="name"><%= fullName %></h3>
       <p class="role">Teacher</p>
       <a href="profile.php" class="btn">view profile</a>
