--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -64,7 +64,7 @@
    </div>
 
    <div class="profile">
-      <img src="../../public/images/pic-1.jpg" class="image" alt="">
+      <img src="/images/pic-1.jpg" class="image" alt="">
       <h3 class="name"><%= fullName %></h3>
       <p class="role">Teacher</p>
       <a href="profile.php" class="btn">view profile</a>
@@ -251,7 +251,7 @@
 </footer>
 
 <!-- custom js file link  -->
-<script src="../../public/js/script.js"></script>
+<script src="/js/script.js"></script>
 <script>
    console.log('fullName:', '<%= fullName %>');
 </script>
