--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -71,10 +71,10 @@
    </div>
 
    <nav class="navbar">
-      <a href="index.ejs"><i class="fas fa-home"></i><span>Home</span></a>
+      <a href="/homepage"><i class="fas fa-home"></i><span>Home</span></a>
       <a href="manage-students.ejs"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
       <a href="company-details.ejs"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
-      <a href="../../login/loginPage.php"><i class="fa-solid fa-door-open"></i><span>Log Out</span></a>
+      <a href="/logout"><i class="fa-solid fa-door-open"></i><span>Log Out</span></a>
    </nav>
 
 </div>
