--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1287,6 +1287,61 @@ section{
 }
 
 
+.profile-form{
+   color: var(--black);
+   display: flex;
+   flex-direction: column;
+   flex-wrap: nowrap;
+   justify-content: space-around;
+   align-items: center;
+
+}
+
+.profile-field {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: nowrap;
+   justify-content: space-around;
+   align-items: center;
+}
+
+.profile-form label span {
+   width: 100px;
+}
+
+
+.change-password-btn {
+   margin-top: 20px;
+   font-size: 1.8rem;
+   padding: 5px;
+   background-color: var(--main-color);
+   border-radius: 5px;
+   border-color: var(--black);
+   color: white;
+}
+
+.profile-form label{
+   font-size: 1.8rem;
+   width: 600px;
+   margin-top: 5px;
+   margin-bottom: 5px;
+}
+
+.profile-form input[type="text"] {
+   background-color: white;
+   font-size: 1.8rem;
+   border-color: var(--black);
+   border-style: solid;
+   border-width: 3px;
+}
+
+.user-profile {
+   min-height: 550px;
+   height: 650px;
+}
+
+
+
 
 @media (max-width:1200px){
 
