--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -67,7 +67,7 @@
       <img src="/images/pic-1.jpg" class="image" alt="">
       <h3 class="name"><%= fullName %></h3>
       <p class="role">Teacher</p>
-      <a href="profile.php" class="btn">view profile</a>
+      <a href="/profile" class="btn">view profile</a>
    </div>
 
    <nav class="navbar">
