Add change password function for teacher

--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -44,7 +44,7 @@
    
    <section class="flex">
 
-      <a href="index.ejs" class="logo">OJT Portal</a>
+      <a href="/homepage" class="logo">OJT Portal</a>
 
 
       <div class="icons">
