added reports history

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -536,6 +536,7 @@ section{
 
 /* Form */
 /* Add this CSS for the form */
+
 .reports .box-container form {
    font-size: large;
    display: flex;
@@ -569,9 +570,58 @@ section{
    background-color:var(--main-color);
 }
 
+.reports .box-container{
+   margin-bottom: 20px;
+}
+
+.reports .box-container .rectangle {
+   background-color: var(--white);
+   border-radius: 0.5rem;
+   padding: 2rem;
+   width: 60rem;
+   max-width: 100%;
+   margin: auto;
+}
+
 #message-container {
    text-align: center;
    color: var(--black);
+}
+
+table {
+   font-size: small;
+   font-weight: bold;
+   color:var(--black);
+   width: 100%;
+   border-collapse: collapse;
+}
+
+caption {
+   font-size: 1.5em;
+   margin-bottom: 10px;
+}
+
+th, td {
+   border: 1px solid #ddd;
+   padding: 8px;
+   text-align: left;
+}
+
+th {
+   background-color: var(--main-color);
+}
+
+tr:hover {
+   background-color:var(--light-bg);
+}
+
+a {
+   text-decoration: none;
+   color: var(--orange);
+}
+
+a:hover {
+   text-decoration: underline;
 }
 
 /* Form */
