--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1377,7 +1377,7 @@ a:hover {
    margin-bottom: 5px;
 }
 
-.profile-form input[type="text"]{
+.profile-field input[type="text"], .profile-field input[type="password"] {
    background-color: white;
    font-size: 1.8rem;
    border-color: var(--black);
@@ -1385,13 +1385,6 @@ a:hover {
    border-width: 3px;
 }
 
-.profile-form input[type="password"]{
-   background-color: white;
-   font-size: 1.8rem;
-   border-color: var(--black);
-   border-style: solid;
-   border-width: 3px;
-}
 
 
 @media (max-width:1200px){
