--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1271,11 +1271,11 @@ section{
 .footer{
    background-color: var(--white);
    border-top: var(--border);
-   position: sticky;
+   position: fixed;
    bottom: 0; left: 0; right: 0;
    text-align: center;
-   font-size: 2rem;
-   padding:2.5rem 2rem;
+   font-size: 1rem;
+   padding:1.5rem 1rem;
    color:var(--black);
    margin-top: 1rem;
    z-index: 1000;
@@ -1335,9 +1335,14 @@ section{
    border-width: 3px;
 }
 
-.user-profile, section.reports, section.home-grid {
-   min-height: 550px;
-   height: 650px;
+.user-profile {
+   min-height: 850px;
+   height: 875px;
+}
+
+section.reports, section.home-grid {
+   min-height: 650px;
+   height: 700px;
 }
 
 @media (max-width:1200px){
