--- a/teacher/views/profile.ejs
+++ b/teacher/views/profile.ejs
@@ -80,10 +80,19 @@
          <span>ID:</span><input name="teacher-id" type="text" value=<%= teacherId %> disabled> 
       </label>
       <label class="profile-field">
-         <span>Password:</span><input class="password-input" name="password" type="password" placeholder="Your password" required maxlength="20" value=<%= password %> > 
+      <span>Current Password:</span>
+         <input class="current-password" name="currentPassword" type="password" value=<%= password %> required maxlength="20">
+         <i class="fa fa-eye current-password-toggle" onclick="toggleCurrentPasswordVisibility()"></i>
       </label>
       <label class="profile-field">
-         <span>Confirm Password:</span><input class="confirm-password-input" name="confirm-password" type="password" required maxlength="20" placeholder="Confirm password">
+      <span>New Password:</span>
+         <input class="password-input" name="password" type="password" placeholder="Your password" required maxlength="20">
+         <i class="fa fa-eye password-toggle" onclick="togglePasswordVisibility()"></i>
+      </label>
+      <label class="profile-field">
+         <span>Confirm Password:</span>
+         <input class="confirm-password-input" name="confirmPassword" type="password" required maxlength="20" placeholder="Confirm password">
+         <i class="fa fa-eye confirm-password-toggle" onclick="toggleConfirmPasswordVisibility()"></i>
       </label>
          <input class="change-password-btn" type="submit" value="Change Password" name="submit">
       </form>
@@ -101,21 +110,69 @@
 <script src="/js/script.js"></script>
 
 <script>
+
+var currentPassword = document.querySelector(".current-password")
+var currentPasswordToggle = document.querySelector(".current-password-toggle");
 var password = document.querySelector(".password-input");
-var confirm_password = document.querySelector(".confirm-password-input");
+var confirmPassword = document.querySelector(".confirm-password-input");
+var passwordToggle = document.querySelector(".password-toggle");
+var confirmPasswordToggle = document.querySelector(".confirm-password-toggle");
 
-
-  console.log(password, confirm_password);
-
-function validatePassword(){
-  if(password.value != confirm_password.value) {
-    confirm_password.setCustomValidity("Passwords Don't Match");
+function toggleCurrentPasswordVisibility() {
+  var currentPassword = document.querySelector(".current-password");
+  var toggle = document.querySelector(".current-password-toggle");
+  
+  if (currentPassword.type === "password") {
+    currentPassword.type = "text";
+    toggle.classList.add('fa-eye-slash');
+    toggle.classList.remove('fa-eye');
   } else {
-    confirm_password.setCustomValidity('');
+    currentPassword.type = "password";
+    toggle.classList.remove('fa-eye-slash');
+    toggle.classList.add('fa-eye');
   }
 }
+
+function togglePasswordVisibility() {
+  var password = document.querySelector(".password-input");
+  var toggle = document.querySelector(".password-toggle");
+  if (password.type === "password") {
+    password.type = "text";
+    toggle.classList.add('fa-eye-slash');
+    toggle.classList.remove('fa-eye');
+  } else {
+    password.type = "password";
+    toggle.classList.remove('fa-eye-slash');
+    toggle.classList.add('fa-eye');
+  }
+}
+
+function toggleConfirmPasswordVisibility() {
+  var confirmPassword = document.querySelector(".confirm-password-input");
+  var toggle = document.querySelector(".confirm-password-toggle");
+  if (confirmPassword.type === "password") {
+    confirmPassword.type = "text";
+    toggle.classList.add('fa-eye-slash');
+    toggle.classList.remove('fa-eye');
+  } else {
+    confirmPassword.type = "password";
+    toggle.classList.remove('fa-eye-slash');
+    toggle.classList.add('fa-eye');
+  }
+}
+
 password.onchange = validatePassword;
-confirm_password.onkeyup = validatePassword;
+confirmPassword.onkeyup = validatePassword;
+
+function validatePassword(){
+   if(password.value != confirmPassword.value) {
+    confirmPassword.setCustomValidity("Passwords Don't Match");
+  } else {
+   confirmPassword.setCustomValidity('');
+  }
+}
+
+
 </script>
    
 </body>
