--- a/teacher/views/profile.ejs
+++ b/teacher/views/profile.ejs
@@ -46,9 +46,9 @@
 
    <nav class="navbar">
       <a href="/homepage"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="internship-details.php"><i class="fa-solid fa-briefcase"></i><span>Intership Details</span></a>
-      <a href="reports.php"><i class="fa-regular fa-clipboard"></i><span>Reports</span></a>
-      <a href="/logout"><i class="fa-solid fa-door-open"></i><span>Logout</span></a>
+      <a href="manage-students.ejs"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
+      <a href="company-details.ejs"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
+      <a href="/logout"><i class="fa-solid fa-door-open"></i><span>Log Out</span></a>
    </nav>
 
 </div>
@@ -80,19 +80,10 @@
          <span>ID:</span><input name="teacher-id" type="text" value=<%= teacherId %> disabled> 
       </label>
       <label class="profile-field">
-      <span>Current Password:</span>
-         <input class="current-password" name="currentPassword" type="password" value=<%= password %> required maxlength="20">
-         <i class="fa fa-eye current-password-toggle" onclick="toggleCurrentPasswordVisibility()"></i>
+         <span>Password:</span><input class="password-input" name="password" type="password" placeholder="Your password" required maxlength="20" value=<%= password %> > 
       </label>
       <label class="profile-field">
-      <span>New Password:</span>
-         <input class="password-input" name="password" type="password" placeholder="Your password" required maxlength="20">
-         <i class="fa fa-eye password-toggle" onclick="togglePasswordVisibility()"></i>
-      </label>
-      <label class="profile-field">
-         <span>Confirm Password:</span>
-         <input class="confirm-password-input" name="confirmPassword" type="password" required maxlength="20" placeholder="Confirm password">
-         <i class="fa fa-eye confirm-password-toggle" onclick="toggleConfirmPasswordVisibility()"></i>
+         <span>Confirm Password:</span><input class="confirm-password-input" name="confirm-password" type="password" required maxlength="20" placeholder="Confirm password">
       </label>
          <input class="change-password-btn" type="submit" value="Change Password" name="submit">
       </form>
@@ -110,69 +101,21 @@
 <script src="/js/script.js"></script>
 
 <script>
-
-var currentPassword = document.querySelector(".current-password")
-var currentPasswordToggle = document.querySelector(".current-password-toggle");
 var password = document.querySelector(".password-input");
-var confirmPassword = document.querySelector(".confirm-password-input");
-var passwordToggle = document.querySelector(".password-toggle");
-var confirmPasswordToggle = document.querySelector(".confirm-password-toggle");
+var confirm_password = document.querySelector(".confirm-password-input");
 
-function toggleCurrentPasswordVisibility() {
-  var currentPassword = document.querySelector(".current-password");
-  var toggle = document.querySelector(".current-password-toggle");
-  
-  if (currentPassword.type === "password") {
-    currentPassword.type = "text";
-    toggle.classList.add('fa-eye-slash');
-    toggle.classList.remove('fa-eye');
-  } else {
-    currentPassword.type = "password";
-    toggle.classList.remove('fa-eye-slash');
-    toggle.classList.add('fa-eye');
-  }
-}
 
-function togglePasswordVisibility() {
-  var password = document.querySelector(".password-input");
-  var toggle = document.querySelector(".password-toggle");
-  if (password.type === "password") {
-    password.type = "text";
-    toggle.classList.add('fa-eye-slash');
-    toggle.classList.remove('fa-eye');
-  } else {
-    password.type = "password";
-    toggle.classList.remove('fa-eye-slash');
-    toggle.classList.add('fa-eye');
-  }
-}
-
-function toggleConfirmPasswordVisibility() {
-  var confirmPassword = document.querySelector(".confirm-password-input");
-  var toggle = document.querySelector(".confirm-password-toggle");
-  if (confirmPassword.type === "password") {
-    confirmPassword.type = "text";
-    toggle.classList.add('fa-eye-slash');
-    toggle.classList.remove('fa-eye');
-  } else {
-    confirmPassword.type = "password";
-    toggle.classList.remove('fa-eye-slash');
-    toggle.classList.add('fa-eye');
-  }
-}
-
-password.onchange = validatePassword;
-confirmPassword.onkeyup = validatePassword;
+  console.log(password, confirm_password);
 
 function validatePassword(){
-   if(password.value != confirmPassword.value) {
-    confirmPassword.setCustomValidity("Passwords Don't Match");
+  if(password.value != confirm_password.value) {
+    confirm_password.setCustomValidity("Passwords Don't Match");
   } else {
-   confirmPassword.setCustomValidity('');
+    confirm_password.setCustomValidity('');
   }
 }
-
-
+password.onchange = validatePassword;
+confirm_password.onkeyup = validatePassword;
 </script>
    
 </body>
