Finished profile.ejs

--- a/teacher/views/profile.ejs
+++ b/teacher/views/profile.ejs
@@ -161,9 +161,13 @@
    }
    }
 
-
 </script>
 
-   
+<footer class="footer">
+
+   &copy; Copyright @ 2023 by <span>The Croods</span> | All rights reserved!
+
+</footer>
+
 </body>
 </html>
