--- a/public/css/style.css
+++ b/public/css/style.css
@@ -624,6 +624,42 @@ a:hover {
    text-decoration: underline;
 }
 
+.adminbox {
+   background-color: var(--white);
+   color: var(--black);
+   border: 1px solid #ddd;
+   padding: 20px;
+   margin: 10px;
+   border-radius: 8px;
+}
+
+.adminbox h3 {
+   color: var(--black);
+   font-size: large;
+}
+
+.adminbox form {
+   margin-top: 10px;
+}
+
+.adminbox textarea {
+   width: 100%;
+   padding: 10px;
+   margin-bottom: 10px;
+   box-sizing: border-box;
+   border: 1px solid #ddd;
+   border-radius: 4px;
+}
+
+.adminbox button {
+   background-color: var(--main-color);
+   color: white;
+   padding: 10px 15px;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+}
+
 /* Form */
 
 .playlist-details .row{
