--- a/teacher/views/homepage.ejs
+++ b/teacher/views/homepage.ejs
@@ -72,178 +72,47 @@
 
    <nav class="navbar">
       <a href="/homepage"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="manage-students.ejs"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
-      <a href="company-details.ejs"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
+      <a href="/manage-students"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
+      <a href="/company-details"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
       <a href="/logout"><i class="fa-solid fa-door-open"></i><span>Log Out</span></a>
    </nav>
 
 </div>
 
 <section class="home-grid">
-
-   <h1 class="heading">Requirements</h1>
-
+   <h1 class="heading">Dashboard</h1>
    <div class="box-container">
-
-      <div class="box">
-         <h3 class="title">Requirements List:</h3>
-         <p class="requirements">Job Resume: <span></span></p>
-         <p class="requirements">Curriculum Vitae: <span></span></p>
-         <p class="requirements">Cover Letter: <span></span></p>
-         <p class="requirements">MOA: <span></span></p>
-         <p class="requirements">Medical Certificate: <span></span></p>
-         <p class="requirements">Waiver: <span></span></p>
+      
+      <div class="adminbox">
+         <h3 class="title">Student Contact List</h3>
+         <table>
+            <tr>
+               <th>Student ID</th>
+               <th>Name</th>
+               <th>Email</th>
+            </tr>
+            <% students.forEach(student => { %>
+               <tr>
+                  <td><%= student.studentId %></td>
+                  <td><%= student.fullName %></td>
+                  <td><%= student.email %></td>
+               </tr>
+            <% }); %>
+         </table>
       </div>
 
-      <div class="box">
-         <h3 class="title">Announcement</h3>
-         <p class="likes">Total Likes : <span>25</span></p>
-         <a href="#" class="inline-btn">view likes</a>
-         <p class="likes">Total connections : <span>12</span></p>
-         <a href="#" class="inline-btn">view connections</a>
-         <p class="likes">Interactions : <span>4</span></p>
-         <a href="#" class="inline-btn">view interactions</a>
-      </div>
 
-      <div class="box">
-         <h3 class="title">Soft Skills</h3>
-         <div class="flex">
-            <a href="#"><i class="fas fa-code"></i><span>development</span></a>
-            <a href="#"><i class="fas fa-chart-simple"></i><span>business</span></a>
-            <a href="#"><i class="fas fa-pen"></i><span>design</span></a>
-            <a href="#"><i class="fas fa-chart-line"></i><span>marketing</span></a>
-            <a href="#"><i class="fas fa-music"></i><span>music</span></a>
-            <a href="#"><i class="fas fa-camera"></i><span>photography</span></a>
-            <a href="#"><i class="fas fa-cog"></i><span>software</span></a>
-            <a href="#"><i class="fas fa-vial"></i><span>science</span></a>
-         </div>
+      <div class="adminbox">
+         <h3 class="title">Create Announcement</h3>
+         <form>
+            <textarea id="announcementText" placeholder="Type your announcement here..."></textarea>
+            <button type="submit">Submit Announcement</button>
+         </form>
       </div>
-
-      <div class="box">
-         <h3 class="title">Hours Logged This Week</h3>
-         <div class="flex">
-            <a href="#"><i class="fab fa-html5"></i><span>HTML</span></a>
-            <a href="#"><i class="fab fa-css3"></i><span>CSS</span></a>
-            <a href="#"><i class="fab fa-js"></i><span>javascript</span></a>
-            <a href="#"><i class="fab fa-react"></i><span>react</span></a>
-            <a href="#"><i class="fab fa-php"></i><span>PHP</span></a>
-            <a href="#"><i class="fab fa-bootstrap"></i><span>bootstrap</span></a>
-         </div>
-      </div>
-
    </div>
 
 </section>
 
-
-<!--
-<section class="companies">
-
-   <h1 class="heading">Available Companies</h1>
-
-   <div class="box-container">
-
-      <div class="box">
-         <div class="tutor">
-            <img src="../images/pic-2.jpg" alt="">
-            <div class="info">
-               <h3>Hev Abi</h3>
-               <span>21-10-2023</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="../images/thumb-1.png" alt="">
-            <span>JPmorgan</span>
-         </div>
-         <h3 class="title">Web Developer</h3>
-         <a class="inline-btn">Apply</a>
-      </div>
-
-      <div class="box">
-         <div class="tutor">
-            <img src="../images/pic-3.jpg" alt="">
-            <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2023</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="../images/thumb-2.png" alt="">
-            <span>JPmorgan</span>
-         </div>
-         <h3 class="title">Web Developer</h3>
-         <a class="inline-btn">Apply</a>
-      </div>
-
-      <div class="box">
-         <div class="tutor">
-            <img src="../images/pic-4.jpg" alt="">
-            <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2023</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="../images/thumb-3.png" alt="">
-            <span>JPmorgan</span>
-         </div>
-         <h3 class="title">Web Developer</h3>
-         <a class="inline-btn">Apply</a>
-      </div>
-
-      <div class="box">
-         <div class="tutor">
-            <img src="../images/pic-5.jpg" alt="">
-            <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2023</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="../images/thumb-4.png" alt="">
-            <span>JPmorgan</span>
-         </div>
-         <h3 class="title">Web Developer</h3>
-         <a class="inline-btn">Apply</a>
-      </div>
-
-      <div class="box">
-         <div class="tutor">
-            <img src="../images/pic-6.jpg" alt="">
-            <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2023</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="../images/thumb-5.png" alt="">
-            <span>JPmorgan</span>
-         </div>
-         <h3 class="title">Web Developer</h3>
-         <a class="inline-btn">Apply</a>
-      </div>
-
-      <div class="box">
-         <div class="tutor">
-            <img src="../images/pic-7.jpg" alt="">
-            <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2023</span>
-            </div>
-         </div>
-         <div class="thumb">
-            <img src="../images/thumb-6.png" alt="">
-            <span>JPmorgan</span>
-         </div>
-         <h3 class="title">Web Developer</h3>
-         <a class="inline-btn">Apply</a>
-      </div>
-
-   </div>
-
-
-</section>
--->
 <footer class="footer">
 
    &copy; Copyright @ 2023 by <span>The Croods</span> | All rights reserved!
