--- a/teacher/views/profile.ejs
+++ b/teacher/views/profile.ejs
@@ -46,10 +46,10 @@
 
    <nav class="navbar">
       <a href="/homepage"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="manage-students.ejs"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
-      <a href="company-details.ejs"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
+      <a href="/manage-students"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
+      <a href="/company-details"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
       <a href="/logout"><i class="fa-solid fa-door-open"></i><span>Log Out</span></a>
-   </nav>
+    </nav>
 
 </div>
 
