--- a/teacher/views/teacher-details.ejs
+++ b/teacher/views/teacher-details.ejs
@@ -46,11 +46,11 @@
    </div>
 
    <nav class="navbar">
-      <a href="index.php"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="internship-details.php"><i class="fa-solid fa-briefcase"></i><span>Intership Details</span></a>
-      <a href="reports.php"><i class="fa-regular fa-clipboard"></i><span>Reports</span></a>
-      <a href="logout.php"><i class="fa-solid fa-door-open"></i><span>Logout</span></a>
-   </nav>
+      <a href="/homepage"><i class="fas fa-home"></i><span>Home</span></a>
+      <a href="/manage-students"><i class="fa-solid fa-briefcase"></i><span>Manage Students</span></a>
+      <a href="/company-details"><i class="fa-solid fa-door-open"></i><span>Company Details</span></a>
+      <a href="/logout"><i class="fa-solid fa-door-open"></i><span>Log Out</span></a>
+    </nav>
 
 </div>
 
